--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">YardApplication</string>
+
+    <string name= "done"><u>Done</u></string>
+    <string name= "newInterchange"><u>New Interchange</u></string>
 </resources>
